--- a/app/pages/register/style.css
+++ b/app/pages/register/style.css
@@ -1,25 +1,3 @@
-body {
-    /* background-color: aquamarine; */
-   
- 
-}
-/* .parent {
-    display: grid;
-    grid-template-columns: 5rem repeat(4, 1fr) 5rem;
-    grid-template-rows: repeat(10, 1fr);
-    grid-column-gap: 4px;
-    grid-row-gap: 5px;
-    }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 7; }
-    .div2 { grid-area: 1 / 1 / 2 / 2; }
-    .div3 { grid-area: 2 / 3 / 4 / 5; }
-    .div4 { grid-area: 5 / 3 / 6 / 5; }
-    .div5 { grid-area: 6 / 3 / 7 / 5; }
-    .div6 { grid-area: 10 / 1 / 11 / 7; }
-    .div7 { grid-area: 10 / 2 / 11 / 3; }
-    .div8 { grid-area: 10 / 3 / 11 / 6; } */
-
 
 #app {
     height: 100vh;
@@ -36,6 +14,8 @@ h1 {
     justify-content: center;
     align-items:flex-end;
     font-size: 3rem;
+    align-items: center;
+    text-align: center;
 }
 
 /* #registerDiv {
@@ -58,7 +38,10 @@ h2 {
     justify-content: center;
     align-items: center;
     justify-items: center;
-
+    width: 12em;
+    height: 4em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size:large;
 }
 
 .registerBtn {
@@ -66,4 +49,5 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
