--- a/app/components/footer/style.css
+++ b/app/components/footer/style.css
@@ -1,10 +1,15 @@
-.footer {
-    display: grid;
+
+ /* .footer {
+     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 4px;
-    grid-row-gap: 5px;
-    margin: 2vw
+    grid-row-gap: 5px; 
+   position:absolute;
+   width: 100%;
+   height: 5rem;
+   color:aliceblue;
+    
 }
 
 #foot1 {
@@ -16,4 +21,4 @@
 #foot2 {
     grid-area: 1 / 2 / 2 / 4;
 
-}
+} */
