--- a/app/pages/home/style.css
+++ b/app/pages/home/style.css
@@ -1,19 +1,22 @@
 @import url('http://fonts.cdnfonts.com/css/pokemon-solid');
 
 
-#h2Home {
-    grid-area: 1 / 2 / 2 / 5;
-
+.h2Home {
+    margin-top: 1rem;
+    /* grid-area: 1 / 2 / 2 / 4; */
+    margin-right: 2vh; 
 }
 
-#sectionHome {
-    font-family: 'Pokemon Solid';
-    grid-area: 2 / 2 / 9 / 5;; 
-}
+.sectionHome {
+    font-family: 'Pokemon Solid'; 
+    margin-top: 7em;
+    
+     /* grid-area: 3 / 2 / 5 / 4; */
+} 
 
-#btnPoke {
+.btnPoke {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.052), rgba(106, 103, 103, 0.194)),url("../../public/images/pokeapi.jfif");
-    grid-area: 5 / 2 / 6 / 5;
+    /* grid-area: 3 / 2 / 5 / 4; */
     background-repeat: no-repeat;
     width: 24em;
     height: 22em;
@@ -27,6 +30,21 @@
     cursor: pointer;
 }
 
+.btnQuiz {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.052), rgba(106, 103, 103, 0.194)),url("../../public/images/quiz.jpg");
+    /* grid-area: 3 / 2 / 5 / 4; */
+    background-repeat: no-repeat;
+    width: 24em;
+    height: 22em;
+    object-fit:fill;
+    margin: .5vw;
+    transition: all 0.2s ease-in-out;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight:600;
+    justify-content: center;
+    justify-items: center;
+    cursor: pointer; 
+}
 #pokeapi:hover {
     transform: scale(1.2);
 } 
