--- a/app/pages/register/style.css
+++ b/app/pages/register/style.css
@@ -1,21 +1,34 @@
 
 #app {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 10rem repeat(3, 1fr) 10rem;
-    grid-template-rows: repeat(8, 1fr);
+    height: 40rem;
+    
+    /* display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr); */
     grid-column-gap: 4px;
     grid-row-gap: 5px;
+    text-align: center;
+    justify-items: center;
+}
+
+.box1 {
+    /* height: 30rem; */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 4px;
+    grid-row-gap: 5px;
+    text-align: center;
+    justify-items: center;
 }
     
 h1 {
-    grid-area: 1 / 2 / 3 / 5;
-    display: flex;
-    justify-content: center;
-    align-items:flex-end;
+    grid-area: 1 / 2 / 2 / 4;
     font-size: 3rem;
     align-items: center;
     text-align: center;
+    justify-content: center;
+    margin-top: 1em; 
 }
 
 /* #registerDiv {
@@ -26,28 +39,35 @@ h1 {
 } */
 
 h2 {
-    grid-area: 4 / 2 / 5 / 5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    grid-area: 3 / 2 / 4 / 4; 
+    justify-items:end;
+    align-items: flex-end;
+    margin-top: 3em; 
 }
 
 .registerInput {
-    grid-area: 5 / 2 / 6 / 5;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
+    grid-area: 4 / 2 / 5 / 4;
+    align-items:flex-end;
+    padding: 1em;
     width: 12em;
-    height: 4em;
+    height: 3em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:large;
+    border: 4px solid black
 }
 
-.registerBtn {
-    grid-area: 6 / 3 / 7 / 4;
-    display: flex;
+
+.Btn1 {
+    grid-area: 5 / 2 / 6 / 4;
+    justify-items: center;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     cursor: pointer;
+    height: 2em;
+    width: 7em;
+    margin-top: -4em;
+}
+
+Btn1:hover {
+    background-color: rgb(201, 123, 28);
 }
