--- a/app/pages/home/style.css
+++ b/app/pages/home/style.css
@@ -1,50 +1,58 @@
 @import url('http://fonts.cdnfonts.com/css/pokemon-solid');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&display=swap');
 
 
 .h2Home {
     margin-top: 1rem;
-    /* grid-area: 1 / 2 / 2 / 4; */
+    font-family: Cinzel, "calibri";
     margin-right: 2vh; 
+
 }
 
 .sectionHome {
     font-family: 'Pokemon Solid'; 
     margin-top: 7em;
+    row-gap: 2em;
     
-     /* grid-area: 3 / 2 / 5 / 4; */
+     
 } 
 
 .btnPoke {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.052), rgba(106, 103, 103, 0.194)),url("../../public/images/pokeapi.jfif");
-    /* grid-area: 3 / 2 / 5 / 4; */
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.052), rgba(106, 103, 103, 0.194)),url("../../public/images/pokemon.jfif");
     background-repeat: no-repeat;
-    width: 24em;
-    height: 22em;
+    width: 20em;
+    height: 20em;
     object-fit:fill;
-    margin: .5vw;
+    background-size: contain;
+    padding: 5vw; 
+    margin:2em;
     transition: all 0.2s ease-in-out;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-weight:600;
-    justify-content: center;
-    justify-items: center;
     cursor: pointer;
+    border: .1em solid white ;
 }
 
 .btnQuiz {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.052), rgba(106, 103, 103, 0.194)),url("../../public/images/quiz.jpg");
-    /* grid-area: 3 / 2 / 5 / 4; */
     background-repeat: no-repeat;
-    width: 24em;
-    height: 22em;
+    width: 20em;
+    height: 20em;
     object-fit:fill;
-    margin: .5vw;
+    background-size: contain;
     transition: all 0.2s ease-in-out;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-weight:600;
-    justify-content: center;
-    justify-items: center;
-    cursor: pointer; 
+    padding: 5vw; 
+    margin: 2em; 
+    cursor: pointer;
+    border: .1em solid white ;
+    
 }
-#pokeapi:hover {
-    transform: scale(1.2);
+.btnPoke:hover {
+    border: .3em solid white ;
 } 
+
+.btnQuiz:hover {
+    border: .3em solid white ; 
+}
