--- a/app/pages/pokeapi/components/style.css
+++ b/app/pages/pokeapi/components/style.css
@@ -26,24 +26,50 @@
     letter-spacing: 1rem;
     text-transform:uppercase;
     font-size: 3em;
-    margin-top: 1em;
+    margin-top: .5em;
     
 }
 .user {
     grid-area: 1 / 5 / 2 / 6;
+    position:relative;
     justify-content: flex-end;
     letter-spacing: 0.2rem;
+    font-family: Ubuntu;
+    font-size: large;
+    padding-bottom: 2em;
 }
 
+.backHome {
+    background-image: url("../../public/images/home1.png");
+    grid-area: 1 / 5 / 2 / 6;
+    width: 15vh;  
+    margin-left: -5em;
+    margin-top: 5em;
+    cursor: pointer; 
+    background-repeat:no-repeat;
+    height:15vh;
+    background-size: 4em 4em;
+    background-position:center;
+    background-color: transparent;
+    border-color: transparent; 
+}
 
 .selectType {
     grid-area: 1 / 2 / 2 / 3;
     margin-left: -5em;
-    margin-top: 5em;
+    margin-top: 9em;
     justify-items: end;
-    width: 10em;
+    width: 12em;
     height: 2em;
-   
+    column-gap: 2em;
+    font-family: Ubuntu, sans-serif;
+    font-size: 0.9em;
+    border: 3px solid rgb(6, 6, 6); 
+}
+
+.option {
+    font-family: Ubuntu;
+    letter-spacing: 2px;
 }
 
 .sectionPoke {
@@ -55,8 +81,7 @@
     margin-top: 7em;
     margin-left: 5em;
     margin-right: 5em;
-    height: 70em;
-    
+    height: 70em; 
 }
 
 #box {
@@ -90,14 +115,10 @@
  text-transform:uppercase
 }
 
-.name:hover {
+/* .name:hover {
 margin-left: 1em;
-} 
+}  */
 
-#name:first-letter{
-    text-transform: capitalize,
-
-} 
 .img {
    justify-content: center;
    margin-top: -1.5em;
@@ -108,12 +129,11 @@ margin-left: 1em;
 }
 
 img:hover {
-    height: 120%;
-    width: 120%;
-    margin-top: -6em;
-    margin-left: 5em;
-    padding-left: 1em;
-    position: sticky;
+    height: 16em;
+    width: 16em;
+    margin-top: -1em;
+
+    /* position: sticky; */
     filter: drop-shadow(0 2px 5px rgba(1, 1, 1, 0.865));
 } 
 
@@ -128,10 +148,10 @@ img:hover {
     padding: .5em;
     transition: all 0.7s ease-in-out;
 }
-.type:hover {
+/* .type:hover {
     opacity: 1;
     padding: 1em;
-}
+} */
 
 .p1 {
     font-family: Ubuntu, "Calibri";
@@ -145,10 +165,10 @@ img:hover {
     padding: .4em 1.2em;
     border-radius: 10%;
 }
-.p1:hover {
+/* .p1:hover {
     opacity: 1;
   
-}
+} */
 
 
 .p2 {
@@ -163,10 +183,10 @@ img:hover {
     padding: .4em 1.2em;
     border-radius: 10%;
 }
-.p2:hover {
+/* .p2:hover {
     opacity: 1;
    
-}
+} */
 
 
 .electric {
@@ -192,7 +212,7 @@ img:hover {
 }  
 .grass {
 
-    background-color:#4a9680bb ;
+    background-color:#c3da1ac0 ;
 }  
 .psychic {
     background-color:#f69bb9c8 ;
