--- a/app/pages/pokeapi/components/style.css
+++ b/app/pages/pokeapi/components/style.css
@@ -27,6 +27,8 @@
     text-transform:uppercase;
     font-size: 3em;
     margin-top: .5em;
+    justify-content: center;
+    margin-left: 1em;
     
 }
 .user {
@@ -124,16 +126,16 @@ margin-left: 1em;
    margin-top: -1.5em;
    height: 15em;
    width: 15em;
-   transition: all 0.7s ease-in-out;
+   transition: all 0.5s ease-in-out;
    filter: drop-shadow(0 2px 5px rgba(7, 0, 0, 0.7));
 }
 
-img:hover {
+.img:hover {
     height: 16em;
     width: 16em;
-    margin-top: -1em;
-
-    /* position: sticky; */
+    margin-top: -3em;
+    margin-left: 2.5em;
+    position: sticky;
     filter: drop-shadow(0 2px 5px rgba(1, 1, 1, 0.865));
 } 
 
